# Applied-AI-TVM

./: .gitignore  README.md
.github/workflows/: ci.yml  codeql.yml  init-mysql.sql  test.yml
tvm/: .env.dist  README.md  pyproject.toml
tvm/src/tvm/: advisory_texts.py  authentication.py  chat.py  crew.py  db.py  filter.py  filter_input_util.py  init_admin.py  init_db.py  main.py  models.py  text_endpoints.py  tvm.sql
tvm/src/tvm/config/: agents.yaml  tasks.yaml
tvm/src/tvm/db/: chroma.sqlite3
tvm/src/tvm/knowledge/: templates.csv  templates.json
tvm/src/tvm/test/: test_advisory_texts.py  test_authentication.py  test_chat.py  test_db_tool.py  test_main.py  test_mainfile.py
tvm/src/tvm/tools/: category_tool.py  custom_tool.py  db_multiple_text_tool.py  db_tool.py  rag.py
tvm/test/: test_advisory_texts.py  test_main.py  test_text_endpoints.py
