[project]
name = "tvm"
version = "0.1.0"
description = "TVM using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
tvm = "tvm.main:run"
run_crew = "tvm.main:run"
train = "tvm.main:train"
replay = "tvm.main:replay"
test = "tvm.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
