[project]
name = "tvm"
version = "0.1.0"
description = "TVM using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
	"crewai[tools]>=0.119.0,<1.0.0",
	"google-genai==1.15.0",
	"google-generativeai>=0.8.5",
	"mysql-connector-python>=9.3.0",
	"passlib>=1.7.4",
	"pymysql>=1.1.1",
	"python-jose==3.5.0",
	"python-multipart>=0.0.20",
	"sentence-transformers>=4.1.0",
]

[project.scripts]
tvm = "tvm.main:run"
run_crew = "tvm.main:run"
train = "tvm.main:train"
replay = "tvm.main:replay"
test = "tvm.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
[tool.pytest.ini_options]
testpaths = [
    "src/tvm/test"
]